Implement a working version for SPAKE2

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "bn.js": "^5.0.0",
     "elliptic": "^6.5.0",
+    "futoin-hkdf": "^1.2.0",
     "scrypt-js": "^2.0.4"
   }
 }
