Create the artifacts from the correct paths during CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ test:
     when: always
     paths:
       - coverage
-      - mochawesome-report
+      - jest-stare
   cache:
     key: ${CI_JOB_NAME}
     paths:
