--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint src",
     "lint-fix": "eslint src --fix",
     "test": "jest test --coverage --reporters default jest-stare",
-    "doc": "documentation build src/** -f html -o doc"
+    "doc": "documentation build src/** -f html -o doc",
+    "bundle": "webpack"
   },
   "devDependencies": {
     "documentation": "^12.1.1",
@@ -22,7 +23,10 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "jest": "^24.9.0",
-    "jest-stare": "^1.18.1"
+    "jest-stare": "^1.18.1",
+    "terser-webpack-plugin": "^4.2.2",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12"
   },
   "dependencies": {
     "bn.js": "^4.11.8",
