Fix yarn audit and update documentation to 13.0.2

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,7 +45,7 @@ publish:
     paths:
       - node_modules/
   script:
-    - yarn publish
+    - yarn bundle
   artifacts:
     paths:
       - dist/spake2.min.js
