--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "spake2",
+  "name": "@niomon/spake2",
   "version": "1.0.2",
   "description": "A Javascript package for SPAKE2 and SPAKE2+",
   "main": "src/index.js",
   "repository": "git@gitlab.com:blocksq/spake2-js.git",
   "author": "Samuel Tang <samuel@blocksq.com>",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "scripts": {
     "lint": "eslint src",
     "lint-fix": "eslint src --fix",
