--- a/package.json
+++ b/package.json
@@ -13,16 +13,15 @@
     "doc": "documentation build src/** -f html -o doc"
   },
   "devDependencies": {
-    "documentation": "^12.1.1",
-    "eslint": "^6.2.1",
-    "eslint-config-standard": "^14.0.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jsdoc": "^15.8.3",
-    "eslint-plugin-node": "^9.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "jest": "^24.9.0",
-    "jest-stare": "^1.18.1"
+    "documentation": "^13.2.5",
+    "eslint": "^8.0.1",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsdoc": "^39.3.3",
+    "eslint-plugin-n": "^15.2.4",
+    "eslint-plugin-promise": "^6.0.0",
+    "jest": "^28.1.3",
+    "jest-stare": "^2.4.1"
   },
   "dependencies": {
     "bn.js": "^5.0.0",
