--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Javascript package for SPAKE2 and SPAKE2+",
   "main": "src/index.js",
   "repository": "git@github.com:niomon/spake2-js.git",
-  "author": "Samuel Tang <samuel@blocksq.com>",
+  "author": "Samuel Tang <samueltangz613@gmail.com>",
   "license": "Apache-2.0",
   "scripts": {
     "lint": "eslint src",
